--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
     "axios": "^0.21.4",
     "chart.js": "^3.5.1",
     "dotenv": "^10.0.0",
+    "express": "^4.17.1",
     "firebase": "^9.0.1",
     "gh-pages": "^3.2.3",
     "harmony-reflect": "^1.6.2",
+    "http-proxy-middleware": "^2.0.1",
+    "morgan": "^1.10.0",
     "react": "^17.0.2",
     "react-chartjs-2": "^3.0.4",
     "react-dom": "^17.0.2",
