--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "axios": "^0.21.4",
     "chart.js": "^3.5.1",
     "dotenv": "^10.0.0",
+    "eslint-plugin-react-hooks": "^4.2.1-alpha-9175f4d15-20210928",
     "express": "^4.17.1",
     "firebase": "^9.0.1",
     "gh-pages": "^3.2.3",
