--- a/package.json
+++ b/package.json
@@ -10,15 +10,16 @@
     "axios": "^0.21.4",
     "chart.js": "^3.5.1",
     "dotenv": "^10.0.0",
-    "eslint-plugin-react-hooks": "^4.2.1-alpha-9175f4d15-20210928",
     "express": "^4.17.1",
+    "file-loader": "^6.2.0",
     "firebase": "^9.0.1",
     "gh-pages": "^3.2.3",
-    "harmony-reflect": "^1.6.2",
     "react": "^17.0.2",
     "react-chartjs-2": "^3.0.4",
     "react-dom": "^17.0.2",
+    "react-hover": "^3.0.1",
     "react-icons": "^4.2.0",
+    "react-kakao-maps-sdk": "^1.0.1",
     "react-router-dom": "^5.2.1",
     "react-scripts": "4.0.3",
     "source-map": "^0.6.1",
@@ -49,5 +50,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@svgr/webpack": "^5.5.0"
   }
 }
